packages/lustre-v6.6.103.3/test/should_fail/semantics/import2.lus
node imp(x,y: int) returns (z,t: int);
node import2(a: int) returns (d: int);
var c: int;
let
	(c,d) = imp(a,c);
tel
